--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Jonathan Adamski is plotting something...</title>
-    <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
     <script src="js/easeljs-0.8.2.combined.js"></script>
     <style>
       html, body {
@@ -16,19 +15,26 @@
         background: #191921;
       }
 
+      @font-face {
+        font-family: 'titles';
+        src: url('fonts/square-deal-webfont.woff2') format('woff2'),
+             url('fonts/square-deal-webfont.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+      }
+
       h1 {
-        font-family: 'PT Mono', monospace;
-        background: rgba(255, 255, 255, .05);
-        color: rgba(255, 255, 255, .15);
-        line-height: 12px;
-        font-size: 20px;
+        font-family: 'titles', monospace;
+        background: rgba(255, 255, 255, .2);
+        color: #fff;
+        line-height: 60px;
+        font-size: 60px;
         position: absolute;
         top: 50%;
-        margin: -6px 0 0 0;
-        text-transform: uppercase;
-        padding: 10px 10px 10px 60px;
-        border: 1px solid rgba(255, 255, 255, 0.04);
-        border-left: 5px solid rgba(255, 0, 0, 0.3)
+        margin: -30px 0 0 0;
+        padding: 8px 10px 0px 10px;
+        border: 1px solid rgba(255, 255, 255, .15);
+        border-left: 5px solid #c00;
       }
 
     </style>
