--- a/src/public/index.html
+++ b/src/public/index.html
@@ -34,7 +34,7 @@
         margin: -30px 0 0 0;
         padding: 8px 10px 0px 10px;
         border: 1px solid rgba(255, 255, 255, .15);
-        border-left: 5px solid #c00;
+        border-left: 5px solid #045;
       }
 
     </style>
