--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Jonathan Adamski is plotting something...</title>
     <script src="js/easeljs-0.8.2.combined.js"></script>
+    <script src="js/tweenjs-0.6.0.combined.js"></script>
     <style>
       html, body {
         margin: 0;
