moved to angular-cli

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Jonathan Adamski is plotting something...</title>
-    <script src="js/easeljs-0.8.2.combined.js"></script>
-    <script src="js/tweenjs-0.6.0.combined.js"></script>
+    <script src="assets/js/easeljs-0.8.2.min.js"></script>
+    <script src="assets/js/tweenjs-0.6.0.min.js"></script>
     <style>
       html, body {
         margin: 0;
@@ -18,8 +18,8 @@
 
       @font-face {
         font-family: 'titles';
-        src: url('fonts/square-deal-webfont.woff2') format('woff2'),
-             url('fonts/square-deal-webfont.woff') format('woff');
+        src: url('assets/fonts/square-deal-webfont.woff2') format('woff2'),
+             url('assets/fonts/square-deal-webfont.woff') format('woff');
         font-weight: normal;
         font-style: normal;
       }
